--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cached_video_preview
 description: Flutter plugin that can help you get remote or local video preview image and cache it.
-version: 1.0.2
+version: 1.0.3
 homepage: https://github.com/Dimolll/cached_video_preview
 
 environment:
@@ -17,9 +17,10 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.7
   path_provider: ^2.0.11
   path: ^1.8.0
-
+  platform: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   moor_generator: ^4.6.0
   build_runner: ^2.1.1
+  lints: ^1.0.1
