--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: cached_video_preview
 description: Flutter plugin that can help you get remote or local video preview image and cache it.
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/Dimolll/cached_video_preview
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.14.4 <3.0.0"
   flutter: ">=2.0.0"
 
 dependencies:
@@ -12,15 +12,15 @@ dependencies:
     sdk: flutter
   metadata_fetch: ^0.4.1
   video_thumbnail: ^0.5.0
-  moor: ^4.6.1+1  
-  moor_flutter: ^4.1.0
+  drift: ^1.0.1  
+  drift_sqflite: ^1.0.0
   sqlite3_flutter_libs: ^0.5.7
-  path_provider: ^2.0.11
+  path_provider: ^2.0.10
   path: ^1.8.0
   platform: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  moor_generator: ^4.6.0
+  drift_dev: ^1.0.1
   build_runner: ^2.1.1
   lints: ^1.0.1
