--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: cached_video_preview
 description: Flutter plugin that can help you get remote or local video preview image and cache it.
-version: 1.0.4
+
+version: 1.0.6
 homepage: https://github.com/Dimolll/cached_video_preview
 
 environment:
@@ -12,15 +13,16 @@ dependencies:
     sdk: flutter
   metadata_fetch: ^0.4.1
   video_thumbnail: ^0.5.0
-  drift: ^1.0.1  
-  drift_sqflite: ^1.0.0
-  sqlite3_flutter_libs: ^0.5.7
-  path_provider: ^2.0.10
+  moor: ^4.4.1  
+  moor_flutter: ^4.0.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.2
   path: ^1.8.0
   platform: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  drift_dev: ^1.0.1
+  moor_generator: ^4.4.1
   build_runner: ^2.1.1
   lints: ^1.0.1
